--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,20 @@
         <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <script src="http://code.jquery.com/jquery-latest.js"></script>
         <script src="/static/bootstrap/js/bootstrap.min.js"></script>
+        <script src="/static/bootstrap/js/bootstrap-responsive.min.css"></script>
     </head>
     <body>
         <div class="row-fluid">
-            <h1>Chennai Heat Scores - Live</h1>
-            <div class="span12">
+              <div class="navbar">
+              <div class="navbar-inner">
+                  <a class="brand" href="#">Chennai Heat Live Scores</a>
+                  <ul class="nav">
+                      <li><a href="/">Match Scores</a></li>
+                      <li><a href="/teams/">Spirit Scores</a></li>
+                  </ul>
+              </div>
+            </div>
+            <div class="span10">
                 {% block content %}
                 {% endblock %}
             </div>
