--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Chennai Heat 2012</title>
+        <title>{{ config.ULTISCORE_TOURNAMENT_NAME }}</title>
         <!-- Bootstrap -->
         <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <script src="http://code.jquery.com/jquery-latest.js"></script>
@@ -9,17 +9,21 @@
         <script src="/static/bootstrap/css/bootstrap-responsive.min.css"></script>
     </head>
     <body>
-        <div class="row-fluid">
-              <div class="navbar">
-              <div class="navbar-inner">
-                  <a class="brand" href="#">Ultimate Scores: {{ config.ULTISCORE_TOURNAMENT_NAME }}</a>
-                  <ul class="nav">
-                      <li><a href="/">Match Scores</a></li>
-                      <li><a href="/teams/">Spirit Scores</a></li>
-                  </ul>
-              </div>
+        <div class="navbar navbar-inverse">
+            <div class="navbar-inner">
+                <a class="brand" href="/">{{ config.ULTISCORE_TOURNAMENT_NAME }}: Scores</a>
+                <ul class="nav">
+                    <li><a href="/">Match Scores</a></li>
+                    <li><a href="/teams/">Spirit Scores</a></li>
+                </ul>
+                <ul class="nav pull-right">
+                    <li><a href="/control/">Control</a></li>
+                    <li><a href="/control/mvps/">MVPs</a></li>
+              </ul>
             </div>
-            <div class="span10">
+        </div>
+        <div class="row-fluid">
+            <div class="span10 offset1">
                 {% block content %}
                 {% endblock %}
             </div>
